--- a/templates/threads.html
+++ b/templates/threads.html
@@ -273,7 +273,7 @@
               </h3>
 
               <div class="right_menu">
-                <a href="{{ thread.url }}" title="{{ thread.created_at }}">{{ thread.created_at | time_ago }}</a> &middot;
+                <a href="{{ thread.url }}" title="{{ thread.created_at }}">{{ thread.created_at }}</a> &middot;
                 <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + thread['id'] }}">Anchor</a>
               </div>
             </div>
@@ -347,7 +347,7 @@
                     </h3>
 
                     <div class="right_menu">
-                      <a href="{{ descendant.url }}" title="{{ descendant.created_at }}">{{ descendant.created_at | time_ago }}</a> &middot;
+                      <a href="{{ descendant.url }}" title="{{ descendant.created_at }}">{{ descendant.created_at }}</a> &middot;
                       <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + descendant['id'] }}">Anchor</a>
                     </div>
                   </div>
