feat: show render_date

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -432,6 +432,7 @@
         {{ attribution.owner }}
       </p>
       <p>Powered by <a href="https://ayco.io/sh/threads">/threads</a></p>
+      <p>Rendered on {{ render_date }}</p>
     </footer>
   </body>
 </html>
