feat: use current site's reset.css

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -21,7 +21,7 @@
       import TimeAgo from 'https://esm.sh/v135/@github/relative-time-element@4.4.0'
     </script>
 
-    <link rel="stylesheet" href="https://webcomponent.io/reset.css" />
+    <link rel="stylesheet" href="/reset.css" />
     <style>
       html {
         scroll-behavior: smooth;
