style: list indent none

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -69,10 +69,10 @@
 
       ul {
         list-style: none;
+        padding-left: 0;
       }
 
       .card {
-        margin-left: -40px;
         display: grid;
         grid-template-columns: 55px auto;
         gap: 5px;
