--- a/static/variables.css
+++ b/static/variables.css
@@ -6,7 +6,7 @@
 	--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 
 	--color-border: hsl(17, 24%, 90%);
-	--color-link: var(--color-brand-blue-3);
+	--color-link: var(--color-brand-blue-5);
 
 	--color-brand-blue-1: #3054bf;
 	--color-brand-blue-2: #203880;
@@ -17,8 +17,10 @@
 	--color-brand-complement: orange;
 
 	--ayo-gradient: linear-gradient(45deg, #3054bf, #416fff);
-	--text-color-dark: black;
+	--text-color-dark: #232323;
+	--text-color-dark-faded: #555;
 	--text-color-light: #f8f9fa;
+	--text-color-light-faded: #999;
 
 	--bg-dark: #343a40;
 	--bg-darker: #212529;
