style: relative small size

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -37,6 +37,10 @@
         a {
           color: var(--color-link);
         }
+
+        small {
+          font-size: var(--font-size-sm);
+        }
       }
       header, footer, main {
         padding: 1em;
