--- a/templates/threads.html
+++ b/templates/threads.html
@@ -123,6 +123,7 @@
         & .body {
 
           & code {
+            font-size: var(--font-size-sm);
             background: rgb(245, 242, 240);
             padding: 0.25em 0.3em;
             border-radius: 5px;
