style: text sizes

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -162,14 +162,18 @@
           display: grid;
           grid-template-columns: auto auto;
           gap: 5px;
-          height: 40px;
+          height: 36px;
+
+          & .author {
+            font-size: var(--font-size-lg)
+          }
 
           & .right_menu {
             font-size: var(--font-size-sm);
             text-align:right;
 
             & a, & span {
-              line-height: 40px;
+              line-height: 36px;
             }
 
             & a{
