--- a/templates/threads.html
+++ b/templates/threads.html
@@ -242,6 +242,7 @@
                 & .media, & .link_card {
                   border: 1px solid rgba(197, 209, 222, 0.15);
                   color: var(--text-color-light-faded);
+                  background: var(--bg-dark);
                 }
                 & .media:hover, & .link_card:hover {
                   color: var(--color-brand-complement);
