--- a/templates/threads.html
+++ b/templates/threads.html
@@ -128,6 +128,7 @@
             padding: 0.25em 0.3em;
             border-radius: 5px;
             display: inline;
+            vertical-align: text-bottom;
           }
 
           & a:has(.link_card) {
