feat: add time zone in rendered footer

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -438,7 +438,7 @@
         {{ attribution.owner }}
       </p>
       <p>Powered by <a href="https://ayco.io/sh/threads">/threads</a></p>
-      <p>Rendered on {{ render_date }}</p>
+      <p>Rendered on {{ render_date }} in Europe/Amsterdam</p>
     </footer>
   </body>
 </html>
